--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -1,19 +1,10 @@
 ---
-layout: default
+layout: archive
 ---
-<div class="collection">
-  <h1>{{ page.title }}</h1>
-  
-  <div class="entries">
-    {% for doc in site[page.collection] %}
-      <article>
-        <h2><a href="{{ doc.url }}">{{ doc.title }}</a></h2>
-        {% if doc.date %}
-          <time datetime="{{ doc.date | date_to_xmlschema }}">
-            {{ doc.date | date: "%B %d, %Y" }}
-          </time>
-        {% endif %}
-      </article>
-    {% endfor %}
-  </div>
+{{ content }}
+
+<div class="entries-{{ entries_layout }}">
+  {% for doc in site[page.collection] %}
+    {% include archive-single.html type=entries_layout %}
+  {% endfor %}
 </div>
